<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".studentFragmentAndActivity.create_account_activity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:src="@drawable/zyra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="Zyra"
        android:textColor="@color/black"
        android:textSize="19.3sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/logoImage"
        app:layout_constraintStart_toEndOf="@+id/logoImage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="Hi ! Welcome"
        android:textColor="@color/black"
        android:textSize="47sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="sans-serif"
        android:text="Create a Zyra account"
        android:textColor="#888888"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userCreateNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:hint="Username"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userCreateNameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userCreateEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:hint="User Email"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userCreateNameField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userCreateEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userCreatePasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:hint="User Password"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userCreateEmailField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userCreatePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/userCreateAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/telegraf_ultra_bold"
        android:text="Create account"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentOrAdmin" />

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="Already have account?"
        android:textColor="#737373"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userCreateAccountButton" />


    <TextView
        android:id="@+id/createAccountAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/telegraf_regular_font"
        android:text="Create account as:"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userCreatePasswordField" />

    <RadioGroup
        android:id="@+id/studentOrAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountAs">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/asStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Student" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/asAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/telegraf_ultra_bold"
        android:text="Login"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/haveAccount"
        app:strokeColor="@color/black"
        app:strokeWidth="5px" />

</androidx.constraintlayout.widget.ConstraintLayout>